@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-28T08:30:13Z",
-  "count_outdated" : 2446,
-  "uniques_outdated" : 610,
-  "count" : 2488,
-  "uniques" : 637,
+  "timestamp" : "2022-09-28T16:35:23Z",
+  "count_outdated" : 2448,
+  "uniques_outdated" : 611,
+  "count" : 2490,
+  "uniques" : 638,
   "clones" : [
-    {
-      "timestamp": "2022-09-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-15T00:00:00Z",
       "count": 3,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-09-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
