@@ -1,12 +1,7 @@
 {
   "count": 42,
-  "uniques": 11,
+  "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-09-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-15T00:00:00Z",
       "count": 3,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-09-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
