@@ -1,3 +1,11 @@
+2022-09-28T16:35:23Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3145290536
+* notice: last 14d: unq all: 12 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 610 2446 / 637 2488
+* notice: next accum: outdated-unq outdated-all / unq all: 611 2448 / 638 2490
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2022-09-14] / [2022-09-28]
+
 2022-09-28T08:30:13Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3141990280
 * notice: last 14d: unq all: 11 42
